# be-out-apps

./: .gitignore  ADMIN_ACTIONS_TABLE.sql  API_CONFIG_IMPROVEMENTS.md  API_URL_FIXES.md  API_URL_STANDARDIZATION_COMPLETE.md  CLEANUP_ADMIN_ACTIONS.sql  CREATE_TEST_ORGANIZER.sql  DATABASE_OPERATIONS_PROTOCOL.md  DEBUG_ORGANIZER_DASHBOARD.sql  DIRECT_UUID_DEBUG.sql  DOCKPLOY_SETUP_GUIDE.md  DYNAMIC_CONTENT_I18N_GUIDE.md  EVENT_PUBLICATION_SIMPLE_FIX.md  FAVORITES_SYSTEM_SQL.md  FAVORITES_SYSTEM_SQL.sql  FIX_AVAILABLE_TICKETS.sql  FIX_EVENT_OWNERSHIP.sql  FIX_MISSING_BOOKINGS.sql  GOOGLE_OAUTH_DEBUG_STATUS.md  IMPLEMENTATION_SUMMARY.md  INSPECT_ADMIN_ACTIONS.sql  IOS_BUILD_FIX_ATTEMPT_2.md  IOS_BUILD_FIX_SUMMARY.md  IOS_BUILD_SUCCESS_SUMMARY.md  LOG_ADMIN_ACTION_FUNCTION.sql  MINIMAL_OAUTH_FIX.md  MOBILE_OAUTH_IMPLEMENTATION_PLAN.md  OAUTH_LOCALHOST_SETUP.md  QUICK_DIAGNOSTIC.sql  QUICK_INSPECT.sql  SIMPLE_OAUTH_STATUS.md  SIMPLE_TRANSFER.sql  STRIPE_PAYMENT_SETUP.sql  STRIPE_REFUNDS_TABLE.sql  THEME_CONSISTENCY_STRATEGY.md  TRANSFER_ALL_EVENTS.sql  add-reservation-expiry-column.sql  apple-app-site-association  debug-email-template.sql  docker-compose.yml  (+13 more)
client/: .eslintrc.js  (+13 more)
client/src-tauri/: Cargo.toml  GoogleService-Info.plist  GoogleService-Info.plist.template  build-signed-android.sh  copy-android-files.sh  tauri.conf.json  test_compile
client/src-tauri/android/: build.gradle.kts
client/src-tauri/capabilities/: main.json
client/src-tauri/icons/: icon.icns
client/src-tauri/res/android/: AndroidManifest.xml
client/src-tauri/src/: google_auth_plugin.rs  lib.rs  mobile.rs  mobile_google_auth.rs
client/src-tauri/src/mobile/: mobile_google_auth.rs  mod.rs
plugins/tauri-plugin-google-signin/: Cargo.toml  build.rs
plugins/tauri-plugin-google-signin/android/: build.gradle
plugins/tauri-plugin-google-signin/src/: commands.rs  lib.rs  mobile.rs  models.rs
tauri-plugin-google-auth/: Cargo.toml  IOS_BUILD_FIX.md  build.rs  package.json
tauri-plugin-google-auth/android/: build.gradle.kts
tauri-plugin-google-auth/examples/tauri-app/: package.json
tauri-plugin-google-auth/guest-js/: index.ts
tauri-plugin-google-auth/ios/: Package.swift  README.md
tauri-plugin-google-auth/ios/Sources/: GoogleAuthPlugin.swift  GoogleAuthPlugin.swift.backup  MinimalGoogleAuthPlugin.swift
tauri-plugin-google-auth/permissions/: default.toml
tauri-plugin-google-auth/permissions/autogenerated/: reference.md
tauri-plugin-google-auth/permissions/schemas/: schema.json
tauri-plugin-google-auth/src/: commands.rs  desktop.rs  lib.rs  mobile.rs  models.rs
(+562 files in other folders)
