[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.60"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.3.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.3.1", features = ["devtools"] }
tauri-plugin-shell = "2.3.0"
tauri-plugin-deep-link = "2.4.1"
# Google Auth plugin temporarily disabled
# tauri-plugin-google-auth = { path = "../../tauri-plugin-google-auth" }


[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"
ndk-context = "0.1"
tokio = { version = "1.0", features = ["time", "net"] }
log = "0.4"
android_logger = "0.13"

[target.'cfg(target_os = "ios")'.dependencies]
log = "0.4"
env_logger = "0.10"


[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
