[package]
name = "tauri-plugin-google-signin"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Tauri plugin for Google Sign-In"
license = "MIT"
repository = ""
links = "tauri-plugin-google-signin"

[dependencies]
tauri = { version = "2.3.1" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
tokio = { version = "1", features = ["full"] }

[build-dependencies]
tauri-build = "2.3.1"
tauri-plugin = "2.3.1"
